z-index fixes

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -85,8 +85,8 @@
     z-index: 3;
 }
 #group2 .parallax_layer--deep{
-    background-image: url('Harbor/images/IMG_2063.JPG');
-    background: lightslategray;
+    background-image: url('https://mat-foucher.github.io/Harbor/images/IMG_2063.JPG');
+    
 }
 
 #group3 {
